Revisão da máquina virtual.