@@ -1,53 +1,38 @@
 package sicxesimulator.assembler;
 
 import org.junit.jupiter.api.Test;
-import sicxesimulator.models.ObjectFile;
-import java.util.Arrays;
-import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
+import sicxesimulator.models.ObjectFile;
+import java.util.List;
 
 public class AssemblerTest {
 
     @Test
-    public void testAssemblerBasicProgram() {
-        Assembler assembler = new Assembler();
-
-        // Código de teste para um programa SIC/XE mínimo
-        List<String> sourceCode = Arrays.asList(
-                "COPY START 1000",
-                "FIRST LDA #45",      // Imediato (n=0, i=1)
-                "SECOND STA 1030",    // Direto (n=1, i=1)
-                "THIRD LDX #10",      // Imediato (n=0, i=1)
-                "END COPY"
+    public void testAssembleSimpleProgram() {
+        // Exemplo de programa assembly simples
+        List<String> originalSource = List.of(
+                "TEST    START   0",
+                "        LDA     ALPHA",
+                "        STA     BETA",
+                "        END     TEST",
+                "ALPHA   WORD    5",
+                "BETA    RESW    1"
         );
+        // Sem macros, o código expandido é igual ao original
 
-        ObjectFile objectFile = assembler.assemble(sourceCode);
+        //noinspection UnnecessaryLocalVariable
+        List<String> expandedSource = originalSource;
 
-        assertNotNull(objectFile);
-        assertEquals(0x1000, objectFile.getStartAddress());
-
-        // Verifica que o código objeto foi gerado corretamente
-        byte[] objectCode = objectFile.getMachineCode();
-        assertNotNull(objectCode);
-        assertTrue(objectCode.length > 0);
-
-        // Verifica se o PC foi atualizado corretamente
-        // (esperado: último endereço + tamanho da instrução)
-        int expectedPC = 0x1000 + 3 + 3 + 3;
-        assertEquals(expectedPC, objectFile.getSymbolTable().getAddress("THIRD"));
-    }
-
-    @Test
-    public void testImmediateValueParsing() {
         Assembler assembler = new Assembler();
+        ObjectFile objectFile = assembler.assemble(originalSource, expandedSource);
 
-        List<String> sourceCode = Arrays.asList(
-                "COPY START 4096",
-                "FIRST LDA #10",  // Teste com valor imediato
-                "END COPY"
-        );
-
-        ObjectFile objectFile = assembler.assemble(sourceCode);
-        assertNotNull(objectFile);
+        // Verifica se o objectFile foi gerado
+        assertNotNull(objectFile, "O ObjectFile não deve ser nulo");
+        // Verifica se o startAddress é 0 (como definido na diretiva START)
+        assertEquals(0, objectFile.getStartAddress(), "Start address deve ser 0");
+        // Verifica se o código objeto não está vazio
+        assertTrue(objectFile.getObjectCode().length > 0, "O código objeto não deve estar vazio");
+        // Verifica se o nome do programa foi definido corretamente
+        assertEquals("TEST", objectFile.getProgramName(), "O nome do programa deve ser TEST");
     }
 }
